<resources>
    <string name="app_name">AndroidChat</string>
    <string name="username_placeholder">Enter your nickname</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="desc_placeholder">What I do</string>
    <string name="not_registered">Not Registered?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="update">UPDATE</string>
    <string name="user_name_placeholder">Jon Doe</string>
    <string name="conversation_summary_placeholder">Hello Jane Doe!</string>
    <string name="user_occupation_placeholder">Manager</string>
    <string name="timestamp_placeholder">1 min</string>
    <string name="avatar_placeholder">avatar</string>
    <string name="search_placeholder">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="login_error_text">Username or Password incorrect</string>
    <string name="register_error_text">Username not available</string>
    <string name="profile_change_error_text">Problem changing profile</string>
    <string name="profile_change_success_text">Changes saved successfully</string>
</resources>